derive/tests/compile-fail/non-primitive.stderr
error: non-primitive field types must specify #[construct_with]
  --> $DIR/non-primitive.rs:18:13
   |
18 |     banana: Toto,
   |             ^^^^
